reworked ActionOnTransmute system, added place result and destroy altar, changed event type